src/objects/ABC_Inc__c.object
<CustomObject>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>ABC Inc</relationshipLabel>
        <relationshipName>ABC_Inc</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ABC_Inc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validation_Code__c</fullName>
        <label>Validation Code</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ABC Inc</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABC Inc</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>